unpackaged/main/default/objects/OrderApi__Transaction__c/OrderApi__Transaction__c.object-meta.xml
<CustomObject>
    <description>Transactions store all debits and credits for double-entry accounting.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>