unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Batch__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the related Batch for the Transaction.</description>
    <inlineHelpText>**System Calculated/Override** Link to the related Batch for the Transaction.</inlineHelpText>
    <label>Batch</label>
    <referenceTo>OrderApi__Batch__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>