unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Credit_Memo_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credit_Memo_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the Credit Memo Line record, when an overpayment is used.</description>
    <inlineHelpText>**System Calculated/Override** Link to the Credit Memo Line record, when an overpayment is used.</inlineHelpText>
    <label>Credit Memo Line</label>
    <referenceTo>OrderApi__Credit_Memo_Line__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>