unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Customer_Link__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Customer_Link__c</fullName>
    <description>**System Calculated** Hyperlink to the customer detail record, either the Account or Contact as determined by the entity field.</description>
    <formula>IF(ISPICKVAL(OrderApi__Entity__c,&quot;Contact&quot;),
HYPERLINK(&quot;/&quot; &amp; OrderApi__Contact__r.Id,  OrderApi__Contact__r.FirstName &amp; &quot; &quot; &amp; OrderApi__Contact__r.LastName, &quot;&quot;),
HYPERLINK(&quot;/&quot; &amp; OrderApi__Account__r.Id,  OrderApi__Account__r.Name, &quot;&quot;))</formula>
    <inlineHelpText>**System Calculated** Hyperlink to the customer detail record, either the Account or Contact as determined by the entity field.</inlineHelpText>
    <label>Customer</label>
    <type>Text</type>
</CustomField>