unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Date__c</fullName>
    <description>The date the Transaction was posted.</description>
    <inlineHelpText>The date the Transaction was posted.</inlineHelpText>
    <label>Date</label>
    <type>Date</type>
</CustomField>