unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Entity__c</fullName>
    <description>**Required/Do not modify picklist values** Select either &quot;Account&quot; or &quot;Contact&quot; as the appropriate entity related to the Transaction.</description>
    <inlineHelpText>**Required/Do not modify picklist values** Select either &quot;Account&quot; or &quot;Contact&quot; as the appropriate entity related to the Transaction.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
                <default>true</default>
                <label>Contact</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>