unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Valid__c</fullName>
    <description>**System Calculated** Validates that Total Debits = Total Credits for all Transaction Lines.</description>
    <formula>((OrderApi__Total_Credits__c &gt; 0) &amp;&amp; (OrderApi__Total_Credits__c ==  OrderApi__Total_Debits__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>**System Calculated** Validates that Total Debits = Total Credits for all Transaction Lines.</inlineHelpText>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>