unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Memo__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Memo__c</fullName>
    <description>Transaction description or memo.</description>
    <inlineHelpText>Transaction description or memo.</inlineHelpText>
    <label>Memo</label>
    <type>TextArea</type>
</CustomField>