unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Num_Lines__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Num_Lines__c</fullName>
    <description>**System Calculated** COUNT of related Transaction Lines.</description>
    <inlineHelpText>**System Calculated** COUNT of related Transaction Lines.</inlineHelpText>
    <label>Num Lines</label>
    <summaryForeignKey>OrderApi__Transaction_Line__c.OrderApi__Transaction__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>