unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Receipt__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the source Receipt for the Transaction.</description>
    <inlineHelpText>**System Calculated/Override** Link to the source Receipt for the Transaction.</inlineHelpText>
    <label>Receipt</label>
    <referenceTo>OrderApi__Receipt__c</referenceTo>
    <relationshipLabel>Transaction (Summary)</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>