unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Receipt_Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receipt_Type__c</fullName>
    <description>**System Calculated** The value of the &quot;Type&quot; field for the linked receipt (where applicable).</description>
    <inlineHelpText>**System Calculated** The value of the &quot;Type&quot; field for the linked receipt (where applicable).</inlineHelpText>
    <label>Receipt Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>