unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Source_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Source_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Source Code.</description>
    <inlineHelpText>Link to related Source Code.</inlineHelpText>
    <label>Source Code</label>
    <referenceTo>OrderApi__Source_Code__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>