unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total_Credits__c</fullName>
    <description>**System Calculated** SUM of related &quot;Credit&quot; Transaction Lines.</description>
    <inlineHelpText>**System Calculated** SUM of related &quot;Credit&quot; Transaction Lines.</inlineHelpText>
    <label>Total Credits</label>
    <summarizedField>OrderApi__Transaction_Line__c.OrderApi__Credit__c</summarizedField>
    <summaryForeignKey>OrderApi__Transaction_Line__c.OrderApi__Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>