unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Total_Debits__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Total_Debits__c</fullName>
    <description>**System Calculated** SUM of related &quot;Debit&quot; Transaction Lines.</description>
    <inlineHelpText>**System Calculated** SUM of related &quot;Debit&quot; Transaction Lines.</inlineHelpText>
    <label>Total Debits</label>
    <summarizedField>OrderApi__Transaction_Line__c.OrderApi__Debit__c</summarizedField>
    <summaryForeignKey>OrderApi__Transaction_Line__c.OrderApi__Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>