unpackaged/main/default/objects/OrderApi__Transaction__c/fields/OrderApi__Type__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Type__c</fullName>
    <description>**System Calculated/Override** A &quot;Receivable&quot; Transaction occurs when an Invoice is posted, a &quot;Cash&quot; Transaction occurs when payment is received for an Invoice or Sales Order. Paid Invoices will have at least one &quot;Receivable&quot; and one &quot;Cash&quot; Transaction.</description>
    <inlineHelpText>**System Calculated/Override** A &quot;Receivable&quot; Transaction occurs when an Invoice is posted, a &quot;Cash&quot; Transaction occurs when payment is received for an Invoice or Sales Order. Paid Invoices will have at least one &quot;Receivable&quot; and one &quot;Cash&quot; Transaction.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Receivable</fullName>
                <color>#0B6FCE</color>
                <label>Receivable</label>
            </value>
            <value>
                <fullName>Cash</fullName>
                <color>#78C953</color>
                <label>Cash</label>
            </value>
            <value>
                <fullName>Adjustment</fullName>
                <color>#641CCF</color>
                <label>Adjustment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>