unpackaged/main/default/objects/OrderApi__Transaction__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Type__c</columns>
    <columns>OrderApi__Date__c</columns>
    <columns>OrderApi__Customer_Link__c</columns>
    <columns>OrderApi__Batch__c</columns>
    <columns>OrderApi__Business_Group__c</columns>
    <columns>OrderApi__Memo__c</columns>
    <columns>OrderApi__Total_Debits__c</columns>
    <columns>OrderApi__Total_Credits__c</columns>
    <columns>OrderApi__Is_Valid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>